--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="row flex-row wrap">
         <div class="bucket img1-t2 center">코딩강의 완료</div>
         <div class="bucket img2 center">제태크 공부 및 실전투자</div>
-        <div class="bucket img2 center">술담배 줄이기</div>
+        <div class="bucket img2 center">담배끊기 술줄이기</div>
         <div class="bucket img1-t4 center">주3회 러닝하기</div>
         <div class="bucket img1 center">절약하기</div>
         <div class="bucket img2-t5 center">스페인어 공부</div>
