--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p class="msg">올해는 모두 지킨다!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">코딩강의 완료</div>
+        <div class="bucket img1-t2 center">코딩강의, 기초 스페인어</div>
         <div class="bucket img2 center">제태크 공부 및 실전투자</div>
         <div class="bucket img2 center">담배끊기 술줄이기</div>
         <div class="bucket img1-t4 center">운동 및 식습관 개선</div>
         <div class="bucket img1 center">절약하기</div>
-        <div class="bucket img2-t5 center">기초 스페인어 공부</div>
+        <div class="bucket img2-t5 center">배우자 만나기</div>
     </div>
 
 </body>
